Выполненные задания для урока 4

--- a/lesson_4/task_6.ipynb
+++ b/lesson_4/task_6.ipynb
@@ -37,11 +37,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images\\IMG_20200408_0004.jpg\">"
+    "<img src=\"IMG_20200408_0004.png\">"
    ]
   },
   {
@@ -233,11 +232,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images\\IMG_20200408_0003.jpg\">"
+    "<img src=\"IMG_20200408_0003.png\">"
    ]
   },
   {
