--- a/lesson_4/task_7.ipynb
+++ b/lesson_4/task_7.ipynb
@@ -120,11 +120,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images\\IMG_20200409_0001.jpg\">"
+    "<img src=\"IMG_20200409_0001.png\">"
    ]
   },
   {
@@ -148,11 +147,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images\\IMG_20200409_0002.jpg\">"
+    "<img src=\"IMG_20200409_0002.png\">"
    ]
   },
   {
@@ -176,11 +174,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images\\IMG_20200409_0004.jpg\">"
+    "<img src=\"IMG_20200409_0004.png\">"
    ]
   },
   {
